--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "将数据模型化",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha -t 10000 -r ./test/setup.js --recursive ./test",
+    "test-debug": "NODE_ENV=test mocha --debug -t 10000 -r ./test/setup.js --recursive ./test"
   },
   "repository": {
     "type": "git",
